--- a/views/pages/Login.ejs
+++ b/views/pages/Login.ejs
@@ -18,7 +18,7 @@
   <body class="center text-center">
   	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	  <a class="navbar-brand">
-		<img class="rounded-circle" src="../resources/img/Flatirons.jpg" alt="" width="30" height="30">
+		<img class="rounded-circle" src="https://upload.wikimedia.org/wikipedia/commons/8/80/Flatirons_Winter_Sunrise_edit_2.jpg" alt="" width="30" height="30">
 	  </a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
 	  </div>
 	</nav>
 	<h1>Login Page</h1>
-	  	<img src="/resources/img/Flatirons.jpg" alt="" width="30%" height="30%">
+	  	<img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Flatirons_Winter_Sunrise_edit_2.jpg" alt="" width="50%" height="30%">
 	  	<hr>
 	<form method="post" action="/checkLogin">
 		<div class="dialog login">
