--- a/views/pages/Registration.ejs
+++ b/views/pages/Registration.ejs
@@ -16,8 +16,8 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="weather">
-<img class="rounded-circle" src="../resources/img/Flatirons.jpg" alt="" width="30" height="30">
+<a class="navbar-brand">
+<img class="rounded-circle" src="https://www.google.com.au/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiVi5SK2unhAhWMAnwKHcoeDLsQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FFlatirons&psig=AOvVaw3JOsRI-J5RGFYyOUQmUm1w&ust=1556228766115164" alt="" width="30" height="30">
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
