--- a/views/pages/ProjWebsite.ejs
+++ b/views/pages/ProjWebsite.ejs
@@ -14,8 +14,8 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-<a class="navbar-brand" href="weather">
-<img class="rounded-circle" src="../resources/img/Flatirons.jpg" alt="" width="30" height="30">
+<a class="navbar-brand">
+<img class="rounded-circle" src="https://upload.wikimedia.org/wikipedia/commons/8/80/Flatirons_Winter_Sunrise_edit_2.jpg" alt="" width="30" height="30">
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
